<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_time"
>

    <ToggleButton
        android:id="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:padding="100dp"
        android:background="@drawable/button_style2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textSize="0dp"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_style"
        android:text="@string/whitelist" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn1"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_style"
        android:text="@string/self_defined" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn2"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_style"
        android:text="@string/time" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn4"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_style"
        android:text="@string/btn_setting"
        />

    <TextView
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textview_style2"
        android:text="@string/instructions" />

    <TextView
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/textview_style2"
        android:text="@string/question" />

</RelativeLayout>