<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.ReminderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rlv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn1"
        android:background="@drawable/button_style2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/textview_style2"
            android:text="@string/instructions"/>

        <TextView
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/textview_style2"
            android:text="@string/question" />

    </RelativeLayout>

</FrameLayout>