<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/settings"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal" >


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:src="@drawable/hide_me"/>

            <Switch
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hide_me_switch"
                android:gravity="left"
                android:text="@string/hide_me"
                tools:ignore="RtlHardcoded,RtlSymmetry,UseSwitchCompatOrMaterialXml">
            </Switch>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:src="@drawable/protect_me"/>

            <Switch
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/protect_me_switch"
                android:gravity="left"
                android:text="@string/protect_me"
                tools:ignore="RtlHardcoded,RtlSymmetry,UseSwitchCompatOrMaterialXml">
            </Switch>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:src="@drawable/show_skip_toast"/>

            <Switch
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_skip_toast"
                android:gravity="left"
                android:text="@string/show_skip_toast"
                tools:ignore="RtlHardcoded,RtlSymmetry,UseSwitchCompatOrMaterialXml">
            </Switch>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>